update nodejs & update email

--- a/.dotfiles/.gitconfig
+++ b/.dotfiles/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    email = martinusishoel@live.no
+    email = martinus@ishoel.com
     name = Martinus Ishoel
     username = trekanten
 [alias]
